<resources>
    <string name="app_name">TestGeography</string>

    <string name="hint_username">Type in username (e.g.: Jane Doe)</string>
    <string name="hint_password">Type in password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <string name="hint_newUsername">Enter a username (e.g.: Lucky Luck)</string>
    <string name="hint_email">Enter your email </string>
    <string name="hint_newPassword">Enter a password \n(at least 8 characters\n and at least 1 non-letter)</string>
    <string name="hint_newPassword2">Enter your password again</string>

    <string name="quiz_name">Chaos Geography Quiz\n for beginners</string>
    <string name="button_userStats">View your stats</string>
    <string name="button_userProfile">Go to your user profile</string>
    <string name="startChoiceQuiz">Start a quiz</string>

    <string name="startNewQuiz">Start a new quiz</string>

    <string name="choice1">Choose type of \nquiz questions</string>
    <string name="choice2">Select continents</string>
    <string name="choice3">Select number of questions</string>
    <string name="choice4">Choose if the questions are multiple choice or open question</string>

    <string name="startActualQuiz">Let\'s begin</string>
    <string name="titleUserPage">User profile</string>
    <string name="QuestionPic">Choose the right country</string>
    <string name="editUsername">Change username</string>
    <string name="editPassword">Change password</string>

    <string name="descriptionBtnHome">Go back to the main menu</string>
    <string name="cbAllTypes">Mix of all</string>
    <string name="cbTypeQuiz1">Guess the flag based on the country</string>
    <string name="cbTypeQuiz2">Guess the country based on the flag</string>
    <string name="cbTypeQuiz3">Guess the capital based on the country</string>
    <string name="cbTypeQuiz4">Guess the country based on the capital</string>
    <string name="cbTypeQuiz5">Guess the abbreviation based on the country</string>
    <string name="cbTypeQuiz6">Guess the country based on the abbreviation</string>

    <string name="cbAllRegions">All continents</string>
    <string name="cbRegion1">Africa</string>
    <string name="cbRegion2">Asia</string>
    <string name="cbRegion3">Americas</string>
    <string name="cbRegion4">Europe</string>
    <string name="cbRegion5">Oceania</string>

    <string-array name="quiz_types">
        <item>Mix of all</item>
        <item>Flags</item>
        <item>Capitals</item>
        <item>Anthems</item>
    </string-array>
    <string-array name="regions">
        <item>All</item>
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North and Central America</item>
        <item>Oceania</item>
        <item>South America</item>
    </string-array>
    <string-array name="nrOfQuestions">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>

    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="QuizzesPlayed">Total amount of quizzes played: </string>
    <string name="AverageScore">Your average overall score: </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>