<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.PopTypeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/pastel_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/descriptionBtnHome"
            android:drawableTop="?attr/actionModeCloseDrawable"
            android:drawableTint="@color/white"
            android:onClick="btnToMain_onClick"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleChoiceType"
            android:layout_width="281dp"
            android:layout_height="77dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="114dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:text="@string/choice1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBoxAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/purple_700"
                android:text="@string/cbAllTypes"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/purple_700"
                android:text="@string/cbTypeQuiz2"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox2"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/purple_700"
                android:text="@string/cbTypeQuiz3"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/purple_700"
                android:text="@string/cbTypeQuiz4"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/purple_700"
                android:text="@string/cbTypeQuiz5"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/purple_700"
                android:text="@string/cbTypeQuiz6"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"

        android:background="@color/pastel_pink"
        app:layout_constraintTop_toBottomOf="@id/scrollView2">

        <TextView
            android:id="@+id/titleMCorOpenQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/choice4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>


    <Button
        android:id="@+id/btnTypeQuizDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:onClick="btnDone_onClick"
        android:text="NEXT"
        android:textColor="@color/white"
        android:background="@color/pastel_pink"
        app:icon="@android:drawable/ic_media_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <RadioButton
            android:id="@+id/MCQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="0dp"
            android:buttonTint="@color/purple_700"
            android:text="Multiple choice"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/OpenQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_700"
            android:text="Open answer"
            android:textColor="@color/purple_700" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>